alb.tf
resource "aws_lb" "new_elb" {
  name               = "External-LB"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.demosg.id]
  subnets            = [aws_subnet.public_subnet-1.id, aws_subnet.public_subnet-2.id]
}

resource "aws_lb_target_group" "target_elb" {
  name     = "ALB-TG"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.demovpc.id
}

resource "aws_lb_target_group_attachment" "attachment" {
  count            = length(aws_instance.demoinstance)
  target_group_arn = aws_lb_target_group.target_elb.arn
  target_id        = aws_instance.demoinstance[count.index].id
  port             = 80
  depends_on       = [aws_instance.demoinstance]
}

resource "aws_lb_target_group_attachment" "attachment1" {
  count            = length(aws_instance.demoinstance1)
  target_group_arn = aws_lb_target_group.target_elb.arn
  target_id        = aws_instance.demoinstance1[count.index].id
  port             = 80
  depends_on       = [aws_instance.demoinstance1]
}

resource "aws_lb_listener" "new_elb_listener" {
  load_balancer_arn = aws_lb.new_elb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.target_elb.arn
  }
}
